# La_Z_Bot

./: .gitmodules  README.md
la_z_bot_bringup/: CMakeLists.txt  package.xml
la_z_bot_bringup/config/: gps_localization.yaml  microstrain_params.yaml  params.yml  robot_localization.yaml  zed_common.yaml
la_z_bot_bringup/launch/: bunker.launch  hardware.launch  localization.launch  microstrain.launch  pcl.launch  urg.launch  zed.launch
la_z_bot_bringup/launch/include/: zed_camera.launch.xml
la_z_bot_bringup/scripts/: dual_antenna_to_odom.py  utm_path_player.py  utm_path_saver.py
la_z_bot_description/: CMakeLists.txt  package.xml
la_z_bot_description/launch/: description.launch
la_z_bot_description/urdf/: la_z_bot.urdf.xacro
la_z_bot_navigation/: CMakeLists.txt  package.xml
la_z_bot_navigation/launch/: move_base.launch
la_z_bot_navigation/map/: empty.pgm  empty.yaml
la_z_bot_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
la_z_bot_viz/: CMakeLists.txt  package.xml
la_z_bot_viz/launch/: view_model.launch  view_robot.launch
la_z_bot_viz/rviz/: robot.rviz
