<?xml version="1.0"?>
<package>
  <name>la_z_bot_navigation</name>
  <version>0.8.5</version>
  <description>Launch files and code for autonomous navigation of the la_z_bot</description>
  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>
  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>

</package>
